tests/snapshots/cli__help_project.snap
---
source: tests/cli.rs
expression: "help_output(& [\"project\", \"--help\"])"
---
Project commands (`hpds project init` is an alias for `hpds init`)

Groups project-scoped subcommands. Currently just `init`; run `hpds project init` for the setup wizard.

Usage: hpds project [OPTIONS] <COMMAND>

Commands:
  init  Set up a new or existing project interactively (alias for `hpds init`)
  help  Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose
          Show more detail (underlying commands, tool names)

  -q, --quiet
          Suppress all output except errors

      --no-color
          Disable colored output

      --config <PATH>
          Use this config file instead of discovering hpds.toml

  -h, --help
          Print help (see a summary with '-h')
