tests/snapshots/cli__help_repo_create.snap
---
source: tests/cli.rs
expression: "help_output(& [\"repo\", \"create\", \"--help\"])"
---
Create a GitHub repo for the current project (lab-manual gh flow)

Usage: hpds repo create [OPTIONS]

Options:
      --name <NAME>              Repository name [default: the current directory's name]
  -v, --verbose                  Show more detail (underlying commands, tool names)
      --org <ORG>                GitHub organization (or user) to create the repo under [default: StanfordHPDS]
  -q, --quiet                    Suppress all output except errors
      --no-color                 Disable colored output
      --visibility <VISIBILITY>  Repository visibility [default: private] [possible values: private, public]
      --config <PATH>            Use this config file instead of discovering hpds.toml
  -y, --yes                      Accept the default for every unanswered question; never prompt
  -h, --help                     Print help
