tests/snapshots/cli__help_root.snap
---
source: tests/cli.rs
expression: "help_output(& [\"--help\"])"
---
Unified tooling for the Stanford HPDS lab: format, lint, templates, setup, and repo audits

Usage: hpds [OPTIONS] <COMMAND>

Commands:
  format       Format project files in place (R, Python, Quarto, SQL, Markdown)
  lint         Report lint violations across the project
  init         Set up a new or existing project interactively
  project      Project commands (`hpds project init` is an alias for `hpds init`)
  use          Apply a template component to the current project
  install      Install external software (r, quarto, uv, gh, rig, tinytex, duckdb)
  setup        Set up a fresh machine with the lab toolchain
  git          Git helpers: sensible defaults and global ignore vaccination
  repo         GitHub repository helpers
  audit        Audit the current repo (or the whole org) against lab standards
  tools        Manage hpds-installed formatter/linter tools (advanced)
  config       Print the resolved configuration and where each value came from
  completions  Generate shell completions
  version      Print the hpds version
  upgrade      Upgrade hpds to the latest release
  help         Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose        Show more detail (underlying commands, tool names)
  -q, --quiet          Suppress all output except errors
      --no-color       Disable colored output
      --config <PATH>  Use this config file instead of discovering hpds.toml
  -h, --help           Print help
  -V, --version        Print version
