tests/snapshots/cli__help_setup.snap
---
source: tests/cli.rs
expression: "help_output(& [\"setup\", \"--help\"])"
---
Set up a fresh machine with the lab toolchain

Usage: hpds setup [OPTIONS]

Options:
  -v, --verbose        Show more detail (underlying commands, tool names)
  -q, --quiet          Suppress all output except errors
      --no-color       Disable colored output
      --config <PATH>  Use this config file instead of discovering hpds.toml
  -h, --help           Print help
