tests/snapshots/cli__help_tools_clean.snap
---
source: tests/cli.rs
expression: "help_output(& [\"tools\", \"clean\", \"--help\"])"
---
Remove the tool cache

Usage: hpds tools clean [OPTIONS]

Options:
  -v, --verbose        Show more detail (underlying commands, tool names)
  -q, --quiet          Suppress all output except errors
      --no-color       Disable colored output
      --config <PATH>  Use this config file instead of discovering hpds.toml
  -h, --help           Print help
