tests/snapshots/cli__help_upgrade.snap
---
source: tests/cli.rs
expression: "help_output(& [\"upgrade\", \"--help\"])"
---
Upgrade hpds to the latest release

Usage: hpds upgrade [OPTIONS]

Options:
  -v, --verbose        Show more detail (underlying commands, tool names)
  -q, --quiet          Suppress all output except errors
      --no-color       Disable colored output
      --config <PATH>  Use this config file instead of discovering hpds.toml
  -h, --help           Print help
