tests/snapshots/cli__help_use.snap
---
source: tests/cli.rs
expression: "help_output(& [\"use\", \"--help\"])"
---
Apply a template component to the current project

Applies a lab template: container, gha, hpds.toml, pipeline, poster, readme, slides, slurm, or thesis. Omit the component to list what is available. Embedded templates leave existing files untouched unless --force is given. The slides, poster, and thesis templates require network access and create repository-named subdirectories; existing destinations are refused even with --force.

Usage: hpds use [OPTIONS] [COMPONENT]

Arguments:
  [COMPONENT]
          Component to apply; omit to list the available components

Options:
      --kind <VALUE>
          Component-specific variant (e.g. make, targets, or both for pipeline); omit to choose interactively (pipeline's default is make under `hpds init --yes`)

  -v, --verbose
          Show more detail (underlying commands, tool names)

      --force
          Overwrite differing files for embedded templates; slides, poster, and thesis always refuse existing destinations

  -q, --quiet
          Suppress all output except errors

      --language <LANGUAGE>
          Project language; detected from project files (renv.lock, pyproject.toml, ...) when omitted
          
          [possible values: r, python, both]

      --no-color
          Disable colored output

      --config <PATH>
          Use this config file instead of discovering hpds.toml

      --workflows <NAMES>
          gha workflows to add without prompting (comma-separated or repeated: pr-template, lint, audit-bot)

      --r-version <VERSION>
          R version for an R container. Overrides renv.lock; when omitted, the lockfile version is used before the current R release

  -h, --help
          Print help (see a summary with '-h')
